# diagnostic-agent

./: README.md  build_exe.py  diagnostic_app.spec  installer.bat  launch.bat  main_gui.py  pyproject.toml  requirements.txt  uninstaller.bat
src/laptop_repair/: crew.py  main.py
src/laptop_repair/config/: agents.yaml  tasks.yaml
src/laptop_repair/tools/: custom_tool.py
